objects/Contact.object
<CustomObject>
    <fields>
        <fullName>CN_Account_Name__c</fullName>
        <formula>Account.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Account_Status__c</fullName>
        <formula>TEXT(Account.CN_Account_Status__c)</formula>
        <label>Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Account_Sync_Status__c</fullName>
        <formula>TEXT(Account.CN_Sync_Status__c )</formula>
        <label>Account Sync Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Bill_To_Address__c</fullName>
        <label>Bill To Address</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Change_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Change Request</label>
        <referenceTo>CN_Change_Request__c</referenceTo>
        <relationshipLabel>Change Request</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Contact_Email_Subject__c</fullName>
        <formula>Account.CN_Account_Email_Subject__c</formula>
        <label>Contact Email Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Contact_Name_EN__c</fullName>
        <label>Contact Name(EN)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Contact_Type__c</fullName>
        <label>Contact Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                    <label>01-Billing</label>
                </value>
                <value>
                    <fullName>02</fullName>
                    <label>02-Business</label>
                </value>
                <value>
                    <fullName>04</fullName>
                    <label>04-Others</label>
                </value>
                <value>
                    <fullName>03</fullName>
                    <isActive>false</isActive>
                    <label>03-Receiving</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Converted_From__c</fullName>
        <label>Converted From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Decision_Maker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Decision Maker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Department_Of_Contact_Person__c</fullName>
        <label>Department of Contact Person</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0001</fullName>
                    <label>0001-Purchasing Dept</label>
                </value>
                <value>
                    <fullName>0002</fullName>
                    <label>0002-Sales Dept</label>
                </value>
                <value>
                    <fullName>0003</fullName>
                    <label>0003-Administration Dept</label>
                </value>
                <value>
                    <fullName>0004</fullName>
                    <label>0004-Production Dept</label>
                </value>
                <value>
                    <fullName>0005</fullName>
                    <label>0005-QA Dept</label>
                </value>
                <value>
                    <fullName>0006</fullName>
                    <label>0006-Secretary&apos;s Office</label>
                </value>
                <value>
                    <fullName>0007</fullName>
                    <label>0007-Financial Dept</label>
                </value>
                <value>
                    <fullName>0008</fullName>
                    <label>0008-Legal Dept</label>
                </value>
                <value>
                    <fullName>0009</fullName>
                    <label>0009-Human Resources Dept</label>
                </value>
                <value>
                    <fullName>0010</fullName>
                    <label>0010-General Affairs Dept</label>
                </value>
                <value>
                    <fullName>0011</fullName>
                    <label>0011-Sales Promotion Dept</label>
                </value>
                <value>
                    <fullName>0012</fullName>
                    <label>0012-International Dept</label>
                </value>
                <value>
                    <fullName>0013</fullName>
                    <label>0013-Export Dept</label>
                </value>
                <value>
                    <fullName>0014</fullName>
                    <label>0014-Import Dept</label>
                </value>
                <value>
                    <fullName>0015</fullName>
                    <label>0015-Public Relation Dept</label>
                </value>
                <value>
                    <fullName>0016</fullName>
                    <label>0016-Advertising Dept</label>
                </value>
                <value>
                    <fullName>0017</fullName>
                    <label>0017-Planning Dept</label>
                </value>
                <value>
                    <fullName>0018</fullName>
                    <label>0018-R&amp;D Dept</label>
                </value>
                <value>
                    <fullName>0019</fullName>
                    <label>0019-Product Dev. Dept</label>
                </value>
                <value>
                    <fullName>0020</fullName>
                    <label>0020-Food &amp; Beverage Dept</label>
                </value>
                <value>
                    <fullName>0021</fullName>
                    <label>0021-Service Dept</label>
                </value>
                <value>
                    <fullName>0022</fullName>
                    <label>0022-Technical Support</label>
                </value>
                <value>
                    <fullName>0023</fullName>
                    <label>0023-IT Dept</label>
                </value>
                <value>
                    <fullName>0024</fullName>
                    <label>0024-Logistics Dept</label>
                </value>
                <value>
                    <fullName>0025</fullName>
                    <label>0025-Cold Kitchen</label>
                </value>
                <value>
                    <fullName>0026</fullName>
                    <label>0026-Hot Kitchen</label>
                </value>
                <value>
                    <fullName>0027</fullName>
                    <label>0027-Banquet Kitchen</label>
                </value>
                <value>
                    <fullName>0028</fullName>
                    <label>0028-Pastry</label>
                </value>
                <value>
                    <fullName>0029</fullName>
                    <label>0029-Backery</label>
                </value>
                <value>
                    <fullName>0030</fullName>
                    <label>0030-Bar</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Department_for_API__c</fullName>
        <defaultValue>&apos;0007&apos;</defaultValue>
        <label>CN Department for API</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Family_Info__c</fullName>
        <label>Family Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_FinAR_Email__c</fullName>
        <label>FinAR Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CN_Function__c</fullName>
        <defaultValue>&quot;01&quot;</defaultValue>
        <label>Function</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Is_Others_Contact__c</fullName>
        <formula>AND(
NOT(INCLUDES( CN_Contact_Type__c , &quot;01&quot;)),
NOT(INCLUDES(CN_Contact_Type__c , &quot;02&quot;)),
INCLUDES(CN_Contact_Type__c , &quot;04&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Others Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Latest_CR_Sync_Error_Message__c</fullName>
        <label>Latest Change Request Sync Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CN_Latest_CR_Sync_Status__c</fullName>
        <label>Latest Change Request Sync Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>No Need To Sync</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Latest_CR_Sync_Time__c</fullName>
        <label>Latest Change Request Sync Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CN_Open_Field_To_Comment__c</fullName>
        <label>Open Field to Comment</label>
        <length>3200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CN_SAP_Customer_Code__c</fullName>
        <label>SAP Customer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Sold_To_Party_Customer_Code__c</fullName>
        <formula>Account.CN_Customer_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold-To Party Customer Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Sync_Error_Message__c</fullName>
        <label>Sync Error Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CN_Sync_Status__c</fullName>
        <label>Sync Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Sync_Time__c</fullName>
        <label>Sync Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CN_UP_Code__c</fullName>
        <label>UP code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Wechat_ID__c</fullName>
        <label>Wechat ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Working_Language__c</fullName>
        <label>Working Language</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Chinese</fullName>
                    <default>true</default>
                    <label>Chinese</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>CN_UP_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <recordTypes>
        <fullName>CN_Contact</fullName>
        <active>true</active>
        <label>CN Contact</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CN_Check_Account_IsBlank</fullName>
        <active>true</active>
        <description>CN: Account is mandatory.</description>
        <errorConditionFormula>AND(
  $Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
  RecordType.DeveloperName = &apos;CN_Contact&apos;,
  ISBLANK(AccountId)
)</errorConditionFormula>
        <errorDisplayField>AccountId</errorDisplayField>
        <errorMessage>License Name is mandatory.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Check_BillToAddress</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  $Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
  NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
  RecordType.DeveloperName = &apos;CN_Contact&apos;,
  ISBLANK( CN_Bill_To_Address__c ) ,
  INCLUDES(CN_Contact_Type__c, &quot;01&quot;)
)</errorConditionFormula>
        <errorDisplayField>CN_Bill_To_Address__c</errorDisplayField>
        <errorMessage>Please fill in the bill to address for the billing contact.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Check_Moblie_NumberFormat</fullName>
        <active>true</active>
        <description>CN: Phone Number must be Eleven digits starting with 1</description>
        <errorConditionFormula>AND(
  $Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
  NOT(ISBLANK(MobilePhone)),
  NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
  NOT(OR(REGEX(MobilePhone, &apos;1\\d{10}&apos;),REGEX(MobilePhone,&apos;\\d{3,4}-\\d{8}(-\\d{2,5})?&apos;)))
)</errorConditionFormula>
        <errorDisplayField>MobilePhone</errorDisplayField>
        <errorMessage>Please enter the number in the format of 1XXXXXXXXXX or XXX-XXXXXXXX or XXXX-XXXXXXXX-XXX (X is number).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Check_Phone_NumberFormat</fullName>
        <active>true</active>
        <description>CN: Phone Number must be Eleven digits starting with 1</description>
        <errorConditionFormula>AND(
  $Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
  NOT(ISBLANK(Phone)),
  NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
  NOT(OR(REGEX(Phone, &apos;1\\d{10}&apos;),REGEX(Phone,&apos;\\d{3,4}-\\d{8}(-\\d{2,5})?&apos;)))
)</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>Please enter the number in the format of 1XXXXXXXXXX or XXX-XXXXXXXX or XXXX-XXXXXXXX-XXX (X is number).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Prevent_Convert_To_Exsiting</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
RecordType.DeveloperName = &apos;CN_Contact&apos;,
NOT(ISNEW()),
ISCHANGED(CN_Converted_From__c)
)</errorConditionFormula>
        <errorMessage>It&apos;s not allowed to convert to exsiting records.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Prevent_CreateOrEdit</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  $Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
  NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
  RecordType.DeveloperName = &apos;CN_Contact&apos;,
  NOT(ISPICKVAL(Account.CN_Account_Status__c ,&quot;New&quot;)),
  NOT(AND( ISNEW() ,  NOT(ISBLANK(CN_Change_Request__c)))),
  NOT(ISCHANGED(CN_Change_Request__c)),
  NOT(ISCHANGED( CN_Sync_Status__c )),
  NOT(ISCHANGED( CN_Latest_CR_Sync_Status__c ))
)</errorConditionFormula>
        <errorMessage>Please create contact via creating a new contact change request. 
Please edit existing contact via creating a update contact change request.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Prevent_Edit_Synced_Success</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  $Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
  BEGINS(RecordType.DeveloperName, &quot;CN&quot;),
  ISCHANGED(CN_Sync_Status__c),
  ISPICKVAL(PRIORVALUE(CN_Sync_Status__c) , &quot;Success&quot;) 
)</errorConditionFormula>
        <errorMessage>E-099 : Pls don&apos;t update sync information when the contact has been synchronized.</errorMessage>
    </validationRules>
</CustomObject>